--- a/room_library/build.gradle
+++ b/room_library/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
 }
 
@@ -7,15 +7,13 @@ android {
     compileSdk rootProject.ext.android["compileSdk"]
 
     defaultConfig {
-        applicationId "com.apy.anlibrary"
         minSdk rootProject.ext.android["minSdk"]
         targetSdk rootProject.ext.android["targetSdk"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-        multiDexEnabled true
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -31,23 +29,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-
-    dataBinding{
-        enabled = true
-    }
 }
 
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    implementation project(path: ':library')
-    implementation project(path: ':room_library')
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.android.support:multidex:1.0.3'
 }
